<resources>
    <string name="app_name">Submission 1 - Aplikasi Movie Catalogue</string>
    <string name="overview">Overview</string>
    <string name="crew">Featured Crew</string>
    <string name="director">Director</string>
    <string name="writer">Writer</string>
    <string name="screen_play">Screenplay</string>

    <string-array name="list_title_movie">
        <item>Avengers: Infinity War</item>
        <item>Spider-Man: Into the Spider-Verse</item>
        <item>Bohemian Rhapsody</item>
        <item>Venom</item>
        <item>Aquaman</item>
        <item>Creed II</item>
        <item>Solo: A Star Wars Story</item>
        <item>Bumblebee</item>
        <item>Deadpool 2</item>
        <item>Rupinder Gandhi 2 - The Robinhood</item>
    </string-array>
    <string-array name="list_director_1">
        <item>Joe Russo</item>
        <item>Rodney Rothman</item>
        <item>Bryan Singer</item>
        <item>Ruben Fleischer</item>
        <item>James Wan</item>
        <item>Steven Caple Jr.</item>
        <item>George Lucas</item>
        <item>Cristina Hodson</item>
        <item>David Leitch</item>
        <item>Avtar Singh</item>
    </string-array>
    <string-array name="list_director_2">
        <item>Joe Russo</item>
        <item>Phil Lord</item>
        <item>Bryan Singer</item>
        <item>Scott Rosenberg</item>
        <item>Will Beall</item>
        <item>Juel Taylor</item>
        <item>Ron Howard</item>
        <item>Travis Knight</item>
        <item>Ryan Reynolds</item>
        <item>Inderpal Singh</item>
    </string-array>
    <string-array name="list_screen_play">
        <item>Stephen McFeely</item>
        <item>Steve Ditko</item>
        <item>Peter Morgan</item>
        <item>Kelly Marcel</item>
        <item>Paul Norris</item>
        <item>Juel Story</item>
        <item>Jonathan Kasdan</item>
        <item>-</item>
        <item>Rheett Reese</item>
        <item>-</item>
    </string-array>
    <string-array name="list_description_movie">
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson "Kingpin" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock n roll band Queen in 1970. Hit songs become instant classics. When Mercurys increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orms half-human, half-Atlantean brother and true heir to the throne.</item>
        <item>Between personal obligations and training for his next big fight against an opponent with ties to his familys past, Adonis Creed is up against the challenge of his life.</item>
        <item>Through a series of daring escapades deep within a dark and dangerous criminal underworld, Han Solo meets his mighty future copilot Chewbacca and encounters the notorious gambler Lando Calrissian.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>Wisecracking mercenary Deadpool battles the evil and powerful Cable and other bad guys to save a boys life.</item>
        <item>This is a story of a brave man who fought and won against all odds, Sarpanch Rupinder Singh Gandhi, a prolific sportsman, daring leader and true friend. This movie shows how circumstances and situations converts him into "Something -else" when he and his friends take decisions that end up making them Outlaws. The man who lived for other people and never worried what he was called ~ Robinhood or a Gangser</item>
    </string-array>
    <string-array name="list_images_movie">
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_spiderman</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_venom</item>
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_creed</item>
        <item>@drawable/poster_a_star</item>
        <item>@drawable/poster_bumblebee</item>
        <item>@drawable/poster_deadpool</item>
        <item>@drawable/poster_robinhood</item>
    </string-array>
</resources>
