<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailActivity">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/colorPrimaryDark">
        <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:src="@drawable/poster_robinhood"
                android:scaleType="centerCrop"/>
    </RelativeLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">
            <TextView
                    android:id="@+id/textTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:text="@string/app_name"/>
            <TextView
                    android:layout_marginTop="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:text="@string/crew"/>

            <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">
                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextAppearance.AppCompat.Caption"
                            android:text="@string/director"/>
                    <TextView
                            android:id="@+id/textDirector"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextAppearance.AppCompat.Body1"
                            android:text="Andrew Crew"/>

                </LinearLayout>
                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextAppearance.AppCompat.Caption"
                            android:text="@string/writer"/>
                    <TextView
                            android:id="@+id/textWriter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextAppearance.AppCompat.Body1"
                            android:text="Andrew Crew"/>

                </LinearLayout>
                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextAppearance.AppCompat.Caption"
                            android:text="@string/screen_play"/>
                    <TextView
                            android:id="@+id/textScreenPlay"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextAppearance.AppCompat.Body1"
                            android:text="Andrew Crew"/>

                </LinearLayout>
            </LinearLayout>
            <TextView
                    android:layout_marginTop="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:text="@string/overview"/>
            <TextView
                    android:layout_marginTop="10dp"
                    android:id="@+id/textDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:text="@string/app_name"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>